﻿Version 0.9.94:
+ Custom prefixes now can be any amount of characters long thus are not limited to one character anymore.
+ Added a feature to the `/warn` command - `/warn @Role <reason>`. You are now able to warn all users within a role.
+ Added a feature to the `/unwarn` command - `/unwarn @Role <optional: reason>`. You are now able to unwarn all users within a role.
#%&
Version 0.9.93:
+ Added a new command system for the server. That means for you: quicker command execution that's more stable and reliable
- Removed the `/warnall` command because this is considered an API abuse. We're planning to get this feature back in the future in another form.
+ Moderation and Administration Roles can now be added individually. 
+ Added the `/addmodrole`, `/addadminrole` and `/removemodrole`, `/removeadminrole`, `/listadminroles`, `listmodroles` command to manage the roles by yourself. For more information type `/help`
+ All roles, admin and mod, have been transferred to the database. Default roles for new Guilds will be created with the invite of the bot.
+ Members with the 'Serveradministrator' privilege are now able to issue commands, regarding their roles
#%&
Version 0.9.92:
-> You can Vote here for us https://discordbotlist.com/bots/sahnee-bot
+ Added a discordbotlist.com API to synchronize the guilds
+ Added the `/changelog` and `/changelog <amount>` command. Now you can reread the changelog.
+ New improved logging system
~ Fixed a bug where /warnhistory <number> would do nothing, given a negative number
~ Fixed a bug within the embed generator
#%&
Version 0.9.91:
~ Fixed a bug, where sometimes the database index could not be increased
#%&
Version 0.9.9:
+ Added the `/help` command. Try it!
+ Added a Tutorial Embed if the bot gets invited to a server
+ Bot will now create the bot-commands channel if it does not already exist and the bot got enough permissions